[package]
edition = "2018"
name = "server_rust_node"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = {version="2.0.3", features=["async"]}
napi-derive = "2.0.7"
serde_json = {version="1.0", features = ["raw_value"]}
serde = "1.0"
actix-web = "3"
num_cpus = "1.13.1"

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
